# zuAI-task

./: .gitignore  README.md  pyproject.toml
server/: __init__.py  api_router.py  main.py  settings.py
src/genai_process/: handlers.py  routes.py  views.py
src/sample_paper/: routes.py  schema.py  views.py
src/shared_resource/: cache.py  db.py
tests/: genai_process_views.py  sample_paper_views.py
