[tool.poetry]
name = "zuai"
version = "0.1.0"
description = "ZuAI Backend Engineer Evaluation Task"
authors = ["Satyarth Raghuvanshi <lightyagami.6320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
google-generativeai = "^0.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
autopep8 = "^2.0.4"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
